Fixed height issue on mobile

--- a/src/components/cardGrid/CardGrid.styles.scss
+++ b/src/components/cardGrid/CardGrid.styles.scss
@@ -1,7 +1,7 @@
 .card-grid{
   background-color: #eee;
   width: 100%;
-  height: 80vh;
+  height: calc(100vh - 120px);
   overflow-y: auto;
 
   .cards-container{
