--- a/src/components/header/Header.styles.scss
+++ b/src/components/header/Header.styles.scss
@@ -1,5 +1,5 @@
 .search-header {
-  height: 20vh;
+  height: 120px;
   background-color: #424242;
   display: flex;
   flex-direction: column;
